Resets markup files back to original state due to CORS (cross-origin request policies).
Also removes some jquery in favor of vanilla JS in app.js.

--- a/views/home.html
+++ b/views/home.html
@@ -23,6 +23,33 @@
   </head>
   <body class="index">
 
+    <header>
+      <div class="container">
+        <div id="branding" class="row">
+          <div class="col-xs-6 heading">
+            <h1 class="page_title"><span class="highlight">Welcome</span> to Website Solutions!</h1>
+          </div>
+          <div class="col-xs-6">
+            <nav>
+              <div class="menu-container">
+                <div class="b1"></div>
+                <div class="b2"></div>
+                <div class="b3"></div>
+              </div>
+
+              <ul class="list-inline">
+                <li><a href="home.html" class="btn btn-primary btn-block"><span class="highlight">Home</span></a></li>
+                <li><a href="services.html" class="btn btn-primary btn-block">Services</a></li>
+                <li><a href="about.html" class="btn btn-primary btn-block">About</a></li>
+                <li><a href="projects.html" class="btn btn-primary btn-block">Projects</a></li>
+              </ul>
+
+            </nav>
+          </div>
+        </div>
+      </div>
+    </header>
+
     <section id="body-content">
       <div class="container">
         <div class="row">
@@ -86,6 +113,21 @@
         </div>
       </div> <!-- closes modal-dialog div -->
     </div> <!-- closes modal div -->
+
+    <footer>
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-8">
+            Web Design and Development, Joe DeSoto. Copyright &copy; 2017
+          </div>
+          <div class="col-xs-4">
+            <a class = "footer_link" href="https://www.f6s.com/joedesoto?follow=1" target="_blank" title="Follow Joe DeSoto on F6S">
+              <img class="footer_img" src="https://www.f6s.com/images/f6s-follow-white.png" alt="Follow Joe DeSoto on F6S" />
+            </a>
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <!-- jQuery CDN -->
     <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
