--- a/views/about.html
+++ b/views/about.html
@@ -6,41 +6,38 @@
     <meta name="description" content="Professional Web Designs and Development">
     <meta name="keywords" content="web, web development, website, websites, web design, html, css, js, webpage, developer">
     <meta name="author" content="Joe DeSoto">
-    <!-- webpage tab text -->
-    <title>About</title>
-    <!-- Bootstrap CDN -->
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <!-- css file link -->
-    <link rel="stylesheet" href="../css/styles.css">
-    <!-- Favicon links and meta tags -->
-    <link rel="icon" href="../myicon.ico" type="image/x-icon" />
-    <link rel="manifest" href="/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
+    <title>About</title>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="icon" href="../myicon.ico" type="image/x-icon" />
+    <link rel="manifest" href="/manifest.json">
   </head>
   <body class="about">
+    
     <header>
       <div class="container">
         <div id="branding" class="row">
           <div class="col-xs-6 heading">
-            <h1><span class="highlight">What</span> Website Solutions Is</h1>
+            <h1 class="page_title"><span class="highlight">Welcome</span> to Website Solutions!</h1>
           </div>
           <div class="col-xs-6">
             <nav>
-              <!-- div to hold the menu bars -->
               <div class="menu-container">
-                <!-- set up the three menu bars -->
                 <div class="b1"></div>
                 <div class="b2"></div>
                 <div class="b3"></div>
-              </div> <!-- ends menu-container div -->
+              </div>
+
               <ul class="list-inline">
-                <li><a href="home.html" class="btn btn-primary btn-block">Home</a></li>
+                <li><a href="home.html" class="btn btn-primary btn-block"><span class="highlight">Home</span></a></li>
                 <li><a href="services.html" class="btn btn-primary btn-block">Services</a></li>
-                <li><a href="about.html" class="btn btn-primary btn-block"><span class="highlight">About</span></a></li>
+                <li><a href="about.html" class="btn btn-primary btn-block">About</a></li>
                 <li><a href="projects.html" class="btn btn-primary btn-block">Projects</a></li>
               </ul>
+
             </nav>
           </div>
         </div>
@@ -86,8 +83,13 @@
     <footer>
       <div class="container">
         <div class="row">
-          <div class="col-xs-12">
-            Web Design and Development, Joe DeSoto. Copyright &copy; 2017 <a class = "footer_link" href="https://www.f6s.com/joedesoto?follow=1" target="_blank" title="Follow Joe DeSoto on F6S"><img class="footer_img" src="https://www.f6s.com/images/f6s-follow-white.png" alt="Follow Joe DeSoto on F6S" /></a>
+          <div class="col-xs-8">
+            Web Design and Development, Joe DeSoto. Copyright &copy; 2017
+          </div>
+          <div class="col-xs-4">
+            <a class = "footer_link" href="https://www.f6s.com/joedesoto?follow=1" target="_blank" title="Follow Joe DeSoto on F6S">
+              <img class="footer_img" src="https://www.f6s.com/images/f6s-follow-white.png" alt="Follow Joe DeSoto on F6S" />
+            </a>
           </div>
         </div>
       </div>
