--- a/views/about.html
+++ b/views/about.html
@@ -14,9 +14,10 @@
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="icon" href="../myicon.ico" type="image/x-icon" />
     <link rel="manifest" href="/manifest.json">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap" rel="stylesheet">
   </head>
   <body class="about">
-    
+
     <header>
       <div class="container">
         <div id="branding" class="row">
