--- a/views/services.html
+++ b/views/services.html
@@ -29,19 +29,17 @@
           </div>
           <div class="col-xs-6">
             <nav>
-              <!-- div to hold the menu bars -->
               <div class="menu-container">
-                <!-- set up the three menu bars -->
-                <div class="b1"></div>
-                <div class="b2"></div>
-                <div class="b3"></div>
-              </div> <!-- ends menu-container div -->
-              <ul class="list-inline">
-                <li><a href="home.html" class="btn btn-primary btn-block">Home</a></li>
-                <li><a href="services.html" class="btn btn-primary btn-block"><span class="highlight">Services</span></a></li>
+                <span class="menu-bar"></span>
+              </div>
+
+              <ul class='nav-list'>
+                <li><a href="home.html" class="btn btn-primary btn-block"><span class="highlight">Home</span></a></li>
+                <li><a href="services.html" class="btn btn-primary btn-block">Services</a></li>
                 <li><a href="about.html" class="btn btn-primary btn-block">About</a></li>
                 <li><a href="projects.html" class="btn btn-primary btn-block">Projects</a></li>
               </ul>
+
             </nav>
           </div>
         </div> <!-- closes row div -->
@@ -71,10 +69,6 @@
           <h1 class="page-title">Services</h1>
           <ul id="services">
             <li>
-              <h3>Website Design</h3>
-              <p>Cost: $500 - $2,000 per project </p>
-            </li>
-            <li>
               <h3>Website Development</h3>
               <p>Cost: $2,500 - $4,000 per project </p>
             </li>
@@ -89,7 +83,6 @@
         <h1 class="contact_us">Contact Us</h1>
           <aside id="sidebar">
             <div class="services-dark">
-              <h3 class="sidebar-quote-title">Get A Quote</h3>
               <form class="quote" action="services.html" method="post">
 
                 <div class="sidebar-name-field">
@@ -105,7 +98,7 @@
                 </div>
 
                 <div class="sidebar-quote-button">
-                  <button class="quote_button" type="submit" name="button">Get My Quote</button>
+                  <button class="quote_button" type="submit" name="button">Get Quote</button>
                 </div>
               </form>
             </div>
@@ -113,11 +106,11 @@
       </div>
     </section>
 
-    <footer>
+    <footer class="text-center">
       <div class="container">
         <div class="row">
           <div class="col-xs-12">
-            Web Design and Development, Joe DeSoto. Copyright &copy; 2017 <a class = "footer_link" href="https://www.f6s.com/joedesoto?follow=1" target="_blank" title="Follow Joe DeSoto on F6S"><img class="footer_img" src="https://www.f6s.com/images/f6s-follow-white.png" alt="Follow Joe DeSoto on F6S" /></a>
+            Web development projects made by Joe DeSoto,  <span class="current-year"></span>.
           </div>
         </div>
       </div>
