--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,10 @@
+:root {
+  --theme-orange: #e8491d;
+  --theme-dark-blue: #35424a;
+  --c-white: #fff;
+  --c-black: #000;
+}
+
 html, body {
   box-sizing: border-box;
   font-size: 62.5%;
@@ -5,12 +12,77 @@ html, body {
   margin: 0;
   font-family: 'Montserrat', sans-serif;
   background-color: #f4f4f4;
+  position: relative;
 }
 
 *,
 *:before,
 *:after {
   box-sizing: inherit;
+}
+
+h1 {
+  font-size: 3rem;
+  color: var(--c-white);
+}
+
+h2 {
+  font-size: 2.5rem;
+  color: var(--c-white);
+  margin-top: 1rem;
+}
+
+h5 {
+  font-size: 0.8rem;
+  font-weight: bold;
+}
+
+p {
+  font-size: 1.6rem;
+  color: var(--c-white);
+}
+
+a, button {
+  letter-spacing: 0.5px;
+}
+
+li {
+  list-style-type: none;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.small-12 {
+  width: 100%;
+  padding: 0;
+}
+
+.show-for-large {
+  display: none;
+}
+
+.btn,
+button {
+  border-radius: 0.4rem;
+  border: 0.1rem solid transparent;
+  outline: none;
+  transition: all 0.3s linear;
+  background-color: var(--theme-orange);
+  color: var(--c-white);
+}
+
+.btn:hover,
+button:hover {
+  background-color: var(--c-white);
+  color: var(--theme-orange);
+  border: 0.1rem solid var(--theme-orange);
+}
+
+.btn:focus,
+button:focus {
+  outline: none;
 }
 
 .container {
@@ -21,103 +93,156 @@ html, body {
 /* global dark background. put this class anywhere a dark background is needed. Also changes text color to white */
 .dark {
   padding: 5px 20px 20px 20px;
-  background-color: #35424a;
+  background-color: var(--theme-dark-blue);
   color: #fff;
   height: 65.5vh;
 }
 
+.navbar-container {
+  padding: 0;
+}
+
+.nav-list {
+  height: 0;
+  margin: 0 auto;
+  padding: 0;
+  list-style: none;
+  transition: height 0.45s linear;
+  transform: translateY(4rem);
+}
+
+.nav-list.open {
+  height: 20rem;
+}
+
+.nav-list li {
+  margin-bottom: 5px;
+  width: 100%;
+}
+
+/* header links */
+.nav-list a {
+  color: #fff;
+  text-decoration: none;
+  font-size: 1.4rem;
+  border: 0.1rem solid transparent;
+  background-color: #5d676e;
+  transition: all 0.3s linear;
+  max-width: 47rem;
+  margin: 0 auto;
+}
+
+.nav-list a:hover {
+  color: var(--theme-orange);
+  background-color: var(--c-white);
+  border: 0.1rem solid var(--theme-orange);
+}
+
+.menu-container {
+  display: flex;
+  justify-content: center;
+  position: relative;
+  padding: 0.5rem;
+  width: 3.5rem;
+  height: 3.5rem;
+  top: -1.5rem;
+  left: -0.5rem;
+}
+
+.menu-container:hover {
+  cursor: pointer;
+}
+
+.menu-container::before,
+.menu-container::after {
+  content: '';
+  position: absolute;
+  display: inline-block;
+  width: 2rem;
+  height: 0.2rem;
+  background-color: #fff;
+  transition: all 0.3s linear;
+  bottom: auto;
+}
+
+.menu-container::before {
+  top: 1rem;
+}
+
+.menu-container::after {
+  top: 2.4rem;
+}
+
+.update-menu-bars::before {
+  transform: rotate(-45deg);
+  top: 1.75rem;
+}
+
+.update-menu-bars::after {
+  transform: rotate(45deg);
+  top: 1.75rem;
+}
+
+.menu-bar {
+  display: inline-block;
+  position: absolute;
+  width: 2rem;
+  height: 0.2rem;
+  background-color: #fff;
+  top: 1.7rem;
+  opacity: 1;
+  transition: opacity 0.3s linear;
+}
+
+.update-menu-bars .menu-bar {
+  opacity: 0;
+}
+
 /* set styles for hr's */
 .project_separation {
-  border: 2px solid #e8491d;
+  border: 2px solid var(--theme-orange);
   position: absolute;
   width: 81.7%;
   top: 108.25%;
   left: 11.1%;
 }
 
-/* images section */
 #boxes {
-  margin-top: 20px;
+  margin-top: 2rem;
 }
 
-/************************************************************
-**********             menu bars                   **********
-*************************************************************/
-
-/* Rotate top bar */
-.change .b1 {
-    -webkit-transform: rotate(-45deg) translate(-9px, 6px) ;
-    transform: rotate(-45deg) translate(-5px, 6px) ;
-}
-
-/* Fade out the second bar */
-.change .b2 {
-    opacity: 0;
-}
-
-/* Rotate bottom bar */
-.change .b3 {
-    -webkit-transform: rotate(45deg) translate(-8px, -8px) ;
-    transform: rotate(45deg) translate(-7px, -8px) ;
-}
-
-/************************************************************
-**********             header styling              **********
-*************************************************************/
-
-/* header */
 header {
-  background-color: #35424a;
+  background-color: var(--theme-dark-blue);
   color: #fff;
-  padding-top: 20px;
-  min-height: 85px;
-  border-bottom: #e8491d 3px solid;
+  padding-top: 1.5rem;
+  min-height: 10rem;
+  border-bottom: #e8491d 0.3rem solid;
+  position: relative;
 }
 
-/* header links */
-a.btn-primary.btn-block {
-  color: #fff;
-  font-weight: bold;
-  text-decoration: none; /*removes underline on links */
-  text-transform: uppercase;
-  font-size: 16px;
-  background-color: #35424a;
-  border: none;
+header nav {
+  margin-top: 1rem;
 }
 
-/* align page title with menu options */
-.col-xs-6.heading {
-  padding-top: 3px;
-}
-
-/* style ul's */
-ul {
-  margin: 0 auto;
-  padding: 0;
-  list-style: none;
-}
-
-/* remove list item button padding in header */
-.list-inline>li {
-  padding-right: 0;
-  padding-left: 0;
+.heading {
+  position: absolute;
+  top: 3.5rem;
+  bottom: auto;
+  left: 50%;
+  right: auto;
+  transform: translateX(-50%);
+  width: 75%;
 }
 
 .page_title {
   margin: 0;
-  font-size: 2.5rem;
+  font-size: 2.25rem;
   line-height: 1.25;
-}
-
-/* move menu to the right */
-header nav {
-  float: right;
-  margin-top: 10px;
 }
 
 /* current page color, welcome span color */
 header .highlight {
-  color: #e8491d;
+  color: var(--theme-orange);
   font-weight: bold;
 }
 
@@ -126,59 +251,26 @@ header a:hover {
   color: #ccc;
 }
 
-/* remove padding for header items */
-div.col-xs-6 {
-  padding: 0;
-}
-
 /* set colors for projects button states. commented this out until the dropdown menu is fixed, or functionality is moved to a different page */
 /*.open>.dropdown-toggle.btn-primary:hover,
 .open>.dropdown-toggle.btn-primary:focus {
   background: #286090;
 }*/
 
-
-/* main body content styling */
 #body-content {
-  min-height: 400px;
-  background: url('../img/bg4.jpg') no-repeat 0 -500px;
-  -webkit-filter:grayscale(100%); /* gray out picture to make text more visible */
-  color: #fff;
+  background: url('../img/bg4.jpg') no-repeat;
+  -webkit-filter: grayscale(100%);
+  background-size: cover;
 }
 
-/* main body h1 styling */
-#body-content h1 {
-  margin-top: 100px;
-  font-size: 55px;
-  margin-bottom: 10px;
-  font-weight: bold;
+.body-title {
+  font-size: 3rem;
+  font-weight: 600;
+  margin: 4rem 0;
 }
 
-/* showcase paragraph styling */
-#body-content p {
-  font-size: 20px;
-}
-
-/************************************************************
-**********         newsletter styling              **********
-*************************************************************/
-
-/* newsletter section styling */
-#newsletter {
-  padding: 15px;
-  background-color: #35424a;
-  border-bottom: #e8491d 3px solid;
-}
-
-/* newsletter h2 color */
-#newsletter h2 {
-  color: #fff;
-  margin-top: 10px;
-}
-
-/* newsletter subscribe form margin */
-#newsletter form {
-  margin-top: 10px;
+.body-copy {
+  margin-bottom: 4rem;
 }
 
 /* set styles for projects_description div */
@@ -192,37 +284,58 @@ div.col-xs-6 {
   margin-top: 10px;
 }
 
-/* add top border for index page newsletter section */
 .index-newsletter {
+  padding: 0 1.5rem;
+  background-color: var(--theme-dark-blue);
   border-top: #e8491d 3px solid;
   border-bottom: #e8491d 3px solid;
 }
 
-/* style email input box */
-#newsletter input[type="email"] {
-  padding: 16px 15px 16px 2px; /* put placeholder in correct position due to padding */
-  height: 33px;
-  width: 250px;
-  border-radius: 2px;
-  border: none;
+.index-newsletter .row {
+  padding: 1rem;
 }
 
-/* subscribe button styling */
+.index-newsletter form {
+  margin-top: 1rem;
+  max-width: 37.5rem;
+  margin: 0 auto;
+}
+
+.newsletter_title {
+  margin-bottom: 2rem;
+}
+
+.email-input {
+  height: 3.3rem;
+  width: 75%;
+  border-radius: 0.4rem;
+  border: 0.2rem solid transparent;
+  padding: 0 1rem;
+  margin: 0 auto 1rem auto;
+  font-size: 1.1rem;
+  transition: border 0.3s linear;
+}
+
+.email-input:focus {
+  outline: none;
+}
+
 .subscribe_button {
-  height: 34px;
-  width: 110px;
-  background-color: #e8491d;
+  height: 3.3rem;
   border: none;
   color: #fff;
-  border-radius: 2px;
   font-weight: bold;
+  width: 75%;
+  padding: 0;
+  margin-bottom: 1.5rem;
+  font-size: 1.4rem;
 }
 
 /* quote button styling, services page */
 .quote_button {
   height: 34px;
   width: 89%;
-  background-color: #e8491d;
+  background-color: var(--theme-orange);
   border: none;
   color: #fff;
   border-radius: 2px;
@@ -264,9 +377,9 @@ div.col-xs-6 {
 }
 
 /* sidebar styling in services page */
-.services-dark { /* if attaching the id, place it as one word: aside#id */
+.services-dark {
   padding: 5px 20px 35px 20px;
-  background-color: #35424a;
+  background-color: var(--theme-dark-blue);
   color: #fff;
 }
 
@@ -313,25 +426,14 @@ article#main-col { /* same id attachment rule: article#id */
   width: 65%;
 }
 
-/* footer styling */
 footer {
   width: 100%;
-  top: 111.5%;
-  padding: 15px 10px 10px 10px;
-  margin-top: 20px;
+  position: absolute;
+  bottom: -4.7rem;
+  padding: 1.75rem 0;
   color: #fff;
-  background-color: #e8491d;
-  text-align:center;
+  background-color: var(--theme-orange);
 }
-
-/* adjust image image size in footer */
-.footer_img {
-  width: 100px;
-  height: 28.21px;
-  padding: 0px;
-  margin: 0px;
-}
-/* end footer styling */
 
 /************************************************************
 **********              image slider               **********
@@ -444,34 +546,113 @@ div.railroad-body {
   margin-left: 1000px;
 }
 
-/************************************************************
-**********             media queries               **********
-*************************************************************/
+/* on projects page, set custom image divider position for mobile so it lines up perfectly */
+.handle {
+  left: 51%;
+}
 
-/* media query to handle newsletter form issue starting at 969 px */
-@media(max-width: 969px) {
-  /* margin adjustments for email field at this screen size */
-  #newsletter form input[type="email"] {
-    margin-bottom: 5px;
+/* on projects page, set the font size for image text on mobile */
+.img-text {
+  font-size: 80%;
+  margin: 0;
+}
+
+.itemdesc {
+  margin-top: 0.5rem;
+  margin-bottom: 2rem;
+}
+
+.images-row div:last-child .itemdesc {
+  margin-bottom: 0;
+}
+
+.img-container {
+  width: 50%;
+  margin: 0 -1rem;
+  display: inline-block;
+}
+
+.img-container:hover {
+  cursor: pointer;
+}
+
+.myImg {
+  max-width: 50%;
+}
+
+.modal {
+  top: 50%;
+  bottom: auto;
+  left: 50%;
+  right: auto;
+  transform: translate(-50%, -50%);
+}
+
+.modal img {
+  border-radius: 0.4rem;
+}
+
+/* Modal Content (Image) */
+.modal-content {
+  background-color: #fff;
+  margin: auto;
+  display: block;
+  max-width: 70rem;
+  opacity: 1;
+  -webkit-animation-name: zoom;
+  -webkit-animation-duration: 0.5s;
+  animation-name: zoom;
+  animation-duration: 0.5s;
+  transition: opacity 0.5s linear;
+}
+
+.modal-footer {
+  border: none;
+}
+
+.close_button {
+  width: 50%;
+  margin: 0 auto;
+}
+
+@-webkit-keyframes zoom {
+  from {
+    -webkit-opacity: 0;
   }
-
-  /* adjust width to match email field width */
-  #newsletter button {
-    width: 251px;
+  to {
+    -webkit-opacity: 1;
   }
-} /* ends 969px media query */
+}
 
-/* run on screens up to 768px */
-@media(max-width: 768px) {
+@keyframes zoom {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@media screen and (min-width: 48em) {
   header #branding,
-  header nav,
-  header nav li,
   #newsletter h1,
   #newsletter form,
   #boxes .box,
   article#main-col {
     float: none;
-    text-align: center;
+  }
+
+  .medium-6 {
+    width: 50%;
+    padding: 0;
+  }
+
+  .nav-list a {
+    max-width: 50%;
+  }
+
+  .nav-list.open {
+    height: 20rem;
   }
 
   /* set width of sidebar to take up entire section on smaller screens */
@@ -495,6 +676,54 @@ div.railroad-body {
   .dark {
     height: auto;
     font-size: 13px;
+  }
+
+  .container {
+    width: auto;
+  }
+
+  .page_title {
+    font-size: 3rem;
+  }
+
+  #body-content {
+    min-height: 35rem;
+    display: flex;
+    align-items: center;
+  }
+
+  .index-newsletter {
+    padding: 1.5rem;
+  }
+
+  .index-newsletter .row {
+    display: flex;
+    align-items: center;
+  }
+
+  .subscribe_button {
+    margin-bottom: 0;
+  }
+
+  .images-row {
+    display: flex;
+  }
+
+  .img-container {
+    width: auto;
+    margin: 0 auto;
+  }
+
+  .itemdesc {
+    margin-bottom: 2rem;
+  }
+
+  .images-row div:last-child .itemdesc {
+    margin-bottom: 2rem;
+  }
+
+  .myImg {
+    max-width: 10rem;
   }
 
   /* custom width for railroad-body div on smaller screens. this is to encapsulate its text */
@@ -544,26 +773,6 @@ div.railroad-body {
     width: calc(44vw + 1000px); /* set initial width of the top layer */
   }
 
-  header {
-    padding-bottom: 20px;
-  }
-
-  #body-content h1 {
-    margin-top: 40px;
-  }
-
-  #newsletter button {
-    display: block;
-    width: 200px;
-  }
-
-  #newsletter form input[type="email"] {
-    display: block;
-    width: 200px;
-    /* margin-left: 4px; */
-    margin-bottom: 5px;
-  }
-
   /* set image size for each picture on image slider */
   .layer img {
     position: absolute;
@@ -573,182 +782,96 @@ div.railroad-body {
   }
 } /* ends 768px media query */
 
-/* run on screens up to 480px */
-@media only screen and (max-width: 480px) {
-
-  /* set styles for h2 title on mobile */
-  .newsletter_title {
-    font-size: 26px;
-    margin-top: 0;
+@media screen and (min-width: 64em) {
+  .show-for-large {
+    display: inline-block;
   }
 
-  /* set menu bar div styles */
-  .menu-container {
-    display: block;
-    cursor: pointer;
-    padding: 5px;
-    width: 35px; /* set div width to be the similar to the menu bars width */
-    margin-bottom: 10px;
+  .hide-for-large {
+    display: none;
   }
 
-  /* set up menu bar styles */
-  .b1, .b2, .b3 {
-    width: 30px;
-    height: 3px;
-    background-color: #fff;
-    margin: 6px 0;
-    transition: 0.3s;
-  }
-
-  /* move menu bars to the left on mobile */
-  div.col-xs-6 {
-    width: 100%; /* set buttons to take up their own row */
-  }
-
-  /* change initial height of the ul until hamburger is clicked */
-  .list-inline {
-    height: 0;
-    transition: height 0.6s;
-  }
-
-  /* space between buttons in header on mobile */
-  .list-inline>li {
-    margin-bottom: 5px;
+  header {
+    min-height: 10rem;
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
+    z-index: 1000;
   }
 
-  /* set the height when the menu is clicked */
-  .open {
-    height: 152px;
+  header .container {
+    overflow: visible;
   }
 
-  /* change header li padding on mobile */
-  header li {
-    /* padding: 0 53px 0 1px; */
+  .nav-list {
+    width: 25%;
+    height: 100vh;
+    margin: unset;
+    position: absolute;
+    top: 4rem;
+    bottom: auto;
+    left: -1.5rem;
+    right: auto;
+    transform: translateX(-100%);
+    transition: transform 0.3s linear;
+    background: var(--theme-dark-blue);
   }
 
-  /*  change color for buttons on mobile */
-  a.btn.btn-primary.btn-block {
-    background-color: #4a4735;
-    font-weight: bold;
+  .nav-list.open {
+    height: 100vh;
+    transform: translateX(0);
   }
 
-  /* on projects page, set custom image divider position for mobile so it lines up perfectly */
-  .handle {
-    left: 51%;
+  .nav-list li:first-child {
+    margin-top: 2rem;
   }
 
-  /* on projects page, set the font size for image text on mobile */
-  .img-text {
-    font-size: 80%;
-    margin: 0;
+  .nav-list li {
+    margin: 1rem 0;
   }
 
-  /* reduce font size on mobile for all pages */
-  #body-content h1 {
-    font-size: 40px;
+  .nav-list a {
+    max-width: 60%;
   }
 
-  /* center newsletter input and submit button fields */
-  #newsletter form input[type="email"],
-  #newsletter button {
-    margin: 2% auto;
+  #body-content .container {
+    margin-top: 10rem;
   }
 
-  /* set width for email field on mobile */
-  #newsletter form input[type="email"] {
-    width: 75%;
-    padding: 0 5px;
+  .index-newsletter form {
+    position: relative;
   }
 
-  /* adjust width to match email field on mobile */
-  #newsletter button {
-    width: 75%;
-    padding: 0;
+  .input-underline {
+    opacity: 0;
+    display: inline-block;
+    width: 70%;
+    height: 0.2rem;
+    background-color: var(--theme-orange);
+    position: absolute;
+    left: 50%;
+    top: 2.75rem;
+    transform: translateX(-50%);
+    transition: opacity 0.3s linear;
   }
 
-  /* set styles for close button on modal */
-  .close_button {
-    width: 40%;
-    margin: auto;
+  .hide-input-underline {
+    opacity: 1;
   }
 
-  img.myImg {
-    width: 100%;
+  .img-container {
+    transition: all 0.3s linear;
   }
 
-  .itemdesc {
-    font-size: 0.8em;
-    font-weight: bold;
-  }
-
-  button.close_button {
-    width: 67%;
-  }
-
-  img.footer_img {
-    margin-top: 15px;
-  }
-} /* ends 480px media query
-
-
-/************************************************************
-**********              modal styling              **********
-*************************************************************/
-
-/* style the image used to trigger the modal */
-.myImg {
+  .img-container:hover {
     cursor: pointer;
-    transition: 0.3s;
-    width: 90px;
-}
+    opacity: 0.8;
+    border-radius: 0.4rem;
+    transform: scale(0.9);
+  }
 
-/* set styling for images on hover */
-.myImg:hover {
-  opacity: 0.7;
-  border-radius: 5px;
-}
-
-/* Modal Content (Image) */
-.modal-content {
-  background-color: #fff;
-  margin: auto;
-  display: block;
-  max-width: 700px;
-}
-
-/* set styles on images that appear in the modal */
-.showimage {
-  display: block;
-  margin: auto;
-  border-radius: 5px;
-}
-
-/* set styles for modal footer */
-.modal-footer {
-  border: none;
-}
-
-/* set styles for close button on modal */
-.close_button {
-  width: 40%;
-  margin: auto;
-}
-
-/* Add Animation - Zoom in the Modal */
-.modal-content {
-  -webkit-animation-name: zoom;
-  -webkit-animation-duration: 0.6s;
-  animation-name: zoom;
-  animation-duration: 0.6s;
-}
-
-@-webkit-keyframes zoom {
-  from {-webkit-transform:scale(0)}
-  to {-webkit-transform:scale(1)}
-}
-
-@keyframes zoom {
-  from {transform:scale(0)}
-  to {transform:scale(1)}
+  .myImg:hover {
+    border-radius: 0.4rem;
+  }
 }
