--- a/views/about.html
+++ b/views/about.html
@@ -27,12 +27,10 @@
           <div class="col-xs-6">
             <nav>
               <div class="menu-container">
-                <div class="b1"></div>
-                <div class="b2"></div>
-                <div class="b3"></div>
+                <span class="menu-bar"></span>
               </div>
 
-              <ul class="list-inline">
+              <ul class='nav-list'>
                 <li><a href="home.html" class="btn btn-primary btn-block"><span class="highlight">Home</span></a></li>
                 <li><a href="services.html" class="btn btn-primary btn-block">Services</a></li>
                 <li><a href="about.html" class="btn btn-primary btn-block">About</a></li>
@@ -81,16 +79,11 @@
       </div>
     </section> <!-- ends main section -->
 
-    <footer>
+    <footer class="text-center">
       <div class="container">
         <div class="row">
-          <div class="col-xs-8">
-            Web Design and Development, Joe DeSoto. Copyright &copy; 2017
-          </div>
-          <div class="col-xs-4">
-            <a class = "footer_link" href="https://www.f6s.com/joedesoto?follow=1" target="_blank" title="Follow Joe DeSoto on F6S">
-              <img class="footer_img" src="https://www.f6s.com/images/f6s-follow-white.png" alt="Follow Joe DeSoto on F6S" />
-            </a>
+          <div class="col-xs-12">
+            Web development projects made by Joe DeSoto,  <span class="current-year"></span>.
           </div>
         </div>
       </div>
