--- a/views/projects.html
+++ b/views/projects.html
@@ -29,19 +29,17 @@
           </div>
           <div class="col-xs-6">
             <nav>
-              <!-- div to hold the menu bars -->
               <div class="menu-container">
-                <!-- set up the three menu bars -->
-                <div class="b1"></div>
-                <div class="b2"></div>
-                <div class="b3"></div>
-              </div> <!-- ends menu-container div -->
-              <ul class="list-inline">
-                <li><a href="home.html" class="btn btn-primary btn-block">Home</a></li>
+                <span class="menu-bar"></span>
+              </div>
+
+              <ul class='nav-list'>
+                <li><a href="home.html" class="btn btn-primary btn-block"><span class="highlight">Home</span></a></li>
                 <li><a href="services.html" class="btn btn-primary btn-block">Services</a></li>
                 <li><a href="about.html" class="btn btn-primary btn-block">About</a></li>
-                <li><a href="projects.html" class="btn btn-primary btn-block"><span class="highlight">Projects</span></a></li>
+                <li><a href="projects.html" class="btn btn-primary btn-block">Projects</a></li>
               </ul>
+
             </nav>
           </div>
         </div> <!-- closes row div -->
