--- a/views/home.html
+++ b/views/home.html
@@ -39,7 +39,7 @@
               </div>
 
               <ul class='nav-list'>
-                <li><a href="home.html" class="btn btn-primary btn-block"><span class="highlight">Home</span></a></li>
+                <li><a href="home.html" class="btn btn-primary btn-block">Home</a></li>
                 <li><a href="services.html" class="btn btn-primary btn-block">Services</a></li>
                 <li><a href="about.html" class="btn btn-primary btn-block">About</a></li>
                 <li><a href="projects.html" class="btn btn-primary btn-block">Projects</a></li>
@@ -63,17 +63,17 @@
     </section>
 
     <section id="newsletter" class="index-newsletter">
-        <div class="row">
-          <div class="small-12 medium-6 text-center">
-            <h2 class="newsletter_title">Subscribe to the Newsletter!</h2>
-          </div>
-          <div class="small-12 medium-6 text-center">
-            <form action="home.html" method="post">
-              <input type="email" placeholder="email@email.com" class="email-input" required><span class="input-underline show-for-large"></span>
-              <button type="submit" class="subscribe_button" name="button">Subscribe</button>
-            </form>
-          </div>
+      <div class="row">
+        <div class="small-12 medium-6 text-center">
+          <h2 class="newsletter_title">Subscribe to the Newsletter!</h2>
         </div>
+        <div class="small-12 medium-6 text-center">
+          <form action="home.html" method="post">
+            <input type="email" placeholder="email@email.com" class="email-input" required><span class="input-underline show-for-large"></span>
+            <button type="submit" class="subscribe_button" name="button">Subscribe</button>
+          </form>
+        </div>
+      </div>
     </section>
 
     <section id="boxes">
@@ -110,8 +110,8 @@
         <div class="modal-footer text-center">
           <button type="button" class="btn close_button" data-dismiss="modal">Close</button>
         </div>
-      </div> <!-- closes modal-dialog div -->
-    </div> <!-- closes modal div -->
+      </div>
+    </div>
 
     <footer class="text-center">
       <div class="container">
