--- a/views/projects.html
+++ b/views/projects.html
@@ -23,10 +23,10 @@
   <body class="projects">
     <header>
       <div class="container">
+        <div class="heading text-center">
+          <h1><span class="highlight">Current</span> Projects</h1>
+        </div>
         <div id="branding" class="row">
-          <div class="col-xs-6 heading">
-            <h1><span class="highlight">Current</span> Projects</h1>
-          </div>
           <div class="col-xs-6">
             <nav>
               <div class="menu-container">
