--- a/views/about.html
+++ b/views/about.html
@@ -20,10 +20,10 @@
 
     <header>
       <div class="container">
+        <div class="heading text-center">
+          <h1 class="page_title"><span class="highlight">Welcome</span> to Website Solutions!</h1>
+        </div>
         <div id="branding" class="row">
-          <div class="col-xs-6 heading">
-            <h1 class="page_title"><span class="highlight">Welcome</span> to Website Solutions!</h1>
-          </div>
           <div class="col-xs-6">
             <nav>
               <div class="menu-container">
