--- a/views/services.html
+++ b/views/services.html
@@ -23,10 +23,10 @@
   <body class="services">
     <header>
       <div class="container">
+        <div class="heading text-center">
+          <h1><span class="highlight">Your</span> Website Solution</h1>
+        </div>
         <div id="branding" class="row">
-          <div class="col-xs-6 heading">
-            <h1><span class="highlight">Your</span> Website Solution</h1>
-          </div>
           <div class="col-xs-6">
             <nav>
               <div class="menu-container">
@@ -46,19 +46,16 @@
       </div> <!-- closes container div -->
     </header>
 
-    <section id="newsletter">
-      <div class="container">
-        <div class="row">
-          <div class="col-xs-6 text-center">
-            <h2>Subscribe to the Newsletter!</h2>
-          </div>
-          <div class="col-xs-6 text-center">
-            <form action="home.html" method="post">
-              <input type="email" placeholder="email@email.com" required>
-              <button type="submit" class="subscribe_button" name="button">Subscribe</button>
-              <br><br>
-            </form>
-          </div>
+    <section id="newsletter" class="index-newsletter">
+      <div class="row">
+        <div class="small-12 medium-6 text-center">
+          <h2 class="newsletter_title">Subscribe to the Newsletter!</h2>
+        </div>
+        <div class="small-12 medium-6 text-center">
+          <form action="home.html" method="post">
+            <input type="email" placeholder="email@email.com" class="email-input" required><span class="input-underline show-for-large"></span>
+            <button type="submit" class="subscribe_button" name="button">Subscribe</button>
+          </form>
         </div>
       </div>
     </section>
