--- a/views/services.html
+++ b/views/services.html
@@ -21,46 +21,31 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap" rel="stylesheet">
   </head>
   <body class="services">
+
     <header>
       <div class="container">
         <div class="heading text-center">
-          <h1><span class="highlight">Your</span> Website Solution</h1>
+          <h1 class="page_title"><span class="highlight">Your</span> Website Solution</h1>
         </div>
         <div id="branding" class="row">
-          <div class="col-xs-6">
+          <div class="col-xs-12 navbar-container">
             <nav>
               <div class="menu-container">
                 <span class="menu-bar"></span>
               </div>
-
               <ul class='nav-list'>
-                <li><a href="home.html" class="btn btn-primary btn-block"><span class="highlight">Home</span></a></li>
+                <li><a href="home.html" class="btn btn-primary btn-block">Home</a></li>
                 <li><a href="services.html" class="btn btn-primary btn-block">Services</a></li>
                 <li><a href="about.html" class="btn btn-primary btn-block">About</a></li>
                 <li><a href="projects.html" class="btn btn-primary btn-block">Projects</a></li>
               </ul>
-
             </nav>
           </div>
-        </div> <!-- closes row div -->
-      </div> <!-- closes container div -->
-    </header>
-
-    <section id="newsletter" class="index-newsletter">
-      <div class="row">
-        <div class="small-12 medium-6 text-center">
-          <h2 class="newsletter_title">Subscribe to the Newsletter!</h2>
-        </div>
-        <div class="small-12 medium-6 text-center">
-          <form action="home.html" method="post">
-            <input type="email" placeholder="email@email.com" class="email-input" required><span class="input-underline show-for-large"></span>
-            <button type="submit" class="subscribe_button" name="button">Subscribe</button>
-          </form>
         </div>
       </div>
-    </section>
+    </header>
 
-    <section id="main">
+    <section id="main" class="dark-blue">
       <div class="container">
         <article id="main-col">
           <h1 class="page-title">Services</h1>
@@ -76,30 +61,29 @@
           </ul>
         </article>
 
-        <!-- services page sidebar -->
-        <h1 class="contact_us">Contact Us</h1>
-          <aside id="sidebar">
-            <div class="services-dark">
-              <form class="quote" action="services.html" method="post">
+        <aside id="sidebar">
+          <h1 class="contact_us">Contact Us</h1>
+          <div class="contact-form-container">
+            <form class="quote text-center" action="services.html" method="post">
 
-                <div class="sidebar-name-field">
-                  <input class="side-name" type="text" name="name" placeholder="Your name" required>
-                </div>
+              <div class="sidebar-name-field">
+                <input class="side-name" type="text" name="name" placeholder="Your name" required>
+              </div>
 
-                <div class="sidebar-email-field">
-                  <input class="side-email" type="email" name="email" placeholder="email@email.com" required>
-                </div>
+              <div class="sidebar-email-field">
+                <input class="side-email" type="email" name="email" placeholder="email@email.com" required>
+              </div>
 
-                <div class="sidebar-message">
-                  <textarea class="side-message" name="message" rows="4" cols="22" placeholder="Add your message here" required></textarea>
-                </div>
+              <div class="sidebar-message">
+                <textarea class="side-message" name="message" rows="4" cols="22" placeholder="Add your message here" required></textarea>
+              </div>
 
-                <div class="sidebar-quote-button">
-                  <button class="quote_button" type="submit" name="button">Get Quote</button>
-                </div>
-              </form>
-            </div>
-          </aside>
+              <div class="sidebar-quote-button">
+                <button class="quote_button" type="submit" name="button">Get Quote</button>
+              </div>
+            </form>
+          </div>
+        </aside>
       </div>
     </section>
 
