--- a/views/home.html
+++ b/views/home.html
@@ -64,7 +64,7 @@
         </div>
         <div class="small-12 medium-6 text-center">
           <form action="home.html" method="post">
-            <input type="email" placeholder="email@email.com" class="email-input" required><span class="input-underline show-for-large"></span>
+            <input type="email" placeholder="email@email.com" class="email-input" required>
             <button type="submit" class="subscribe_button" name="button">Subscribe</button>
           </form>
         </div>
