--- a/views/services.html
+++ b/views/services.html
@@ -71,7 +71,7 @@
               </div>
 
               <div class="sidebar-email-field">
-                <input class="side-email" type="email" name="email" placeholder="email@email.com" required>
+                <input class="email-input side-email" type="email" name="email" placeholder="email@email.com" required>
               </div>
 
               <div class="sidebar-message">
