Updates app.js to remoe unused code for targeting input fields.
Also removes second check for com loaded in app.js.

Sets guard clause for year to prevent console error if the
date span is not present or has a different class name.

--- a/views/home.html
+++ b/views/home.html
@@ -21,7 +21,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap" rel="stylesheet">
   </head>
 
-  <body class="index">
+  <body class="home">
 
     <header>
       <div class="container">
