Updates app.js to search for a general span inside the footer and from there, set a dymanic date.
This will make the js not look for a particular class on the footer
span that contains the date, but just any span tag.

Also replaced footer markup on projects page with the same one from
the other pages.

--- a/views/projects.html
+++ b/views/projects.html
@@ -105,14 +105,11 @@
 
     <!-- note, project_separation commented out as of 6/9/2018, because different projects can be given their own static page via dropdown -->
     <!-- <hr class="project_separation"> -->
-    <footer>
+    <footer class="text-center">
       <div class="container">
         <div class="row">
-          <div class="col-xs-8">
-            Web Design and Development, Joe DeSoto. Copyright &copy; 2017 <a class = "footer_link" href="https://www.f6s.com/joedesoto?follow=1" target="_blank" title="Follow Joe DeSoto on F6S">
-          </div>
-          <div class="col-xs-4">
-            <img class="footer_img" src="https://www.f6s.com/images/f6s-follow-white.png" alt="Follow Joe DeSoto on F6S" /></a>
+          <div class="col-xs-12">
+            Web development projects made by Joe DeSoto,  <span class="current-year"></span>.
           </div>
         </div>
       </div>
