--- a/views/about.html
+++ b/views/about.html
@@ -82,7 +82,7 @@
     <footer class="text-center">
       <div class="container">
         <div class="row">
-          <div class="col-xs-12">
+          <div class="col-xs-12 footer-text">
             Web development projects made by Joe DeSoto,  <span class="current-year"></span>.
           </div>
         </div>
