--- a/views/about.html
+++ b/views/about.html
@@ -21,22 +21,20 @@
     <header>
       <div class="container">
         <div class="heading text-center">
-          <h1 class="page_title"><span class="highlight">Welcome</span> to Website Solutions!</h1>
+          <h1 class="page_title"><span class="highlight">About</span> Website Solutions</h1>
         </div>
         <div id="branding" class="row">
-          <div class="col-xs-6">
+          <div class="col-xs-12 navbar-container">
             <nav>
               <div class="menu-container">
                 <span class="menu-bar"></span>
               </div>
-
               <ul class='nav-list'>
-                <li><a href="home.html" class="btn btn-primary btn-block"><span class="highlight">Home</span></a></li>
+                <li><a href="home.html" class="btn btn-primary btn-block">Home</a></li>
                 <li><a href="services.html" class="btn btn-primary btn-block">Services</a></li>
                 <li><a href="about.html" class="btn btn-primary btn-block">About</a></li>
                 <li><a href="projects.html" class="btn btn-primary btn-block">Projects</a></li>
               </ul>
-
             </nav>
           </div>
         </div>
