--- a/views/projects.html
+++ b/views/projects.html
@@ -24,26 +24,24 @@
     <header>
       <div class="container">
         <div class="heading text-center">
-          <h1><span class="highlight">Current</span> Projects</h1>
+          <h1 class="page_title"><span class="highlight">Current</span> Projects</h1>
         </div>
         <div id="branding" class="row">
-          <div class="col-xs-6">
+          <div class="col-xs-12 navbar-container">
             <nav>
               <div class="menu-container">
                 <span class="menu-bar"></span>
               </div>
-
               <ul class='nav-list'>
-                <li><a href="home.html" class="btn btn-primary btn-block"><span class="highlight">Home</span></a></li>
+                <li><a href="home.html" class="btn btn-primary btn-block">Home</a></li>
                 <li><a href="services.html" class="btn btn-primary btn-block">Services</a></li>
                 <li><a href="about.html" class="btn btn-primary btn-block">About</a></li>
                 <li><a href="projects.html" class="btn btn-primary btn-block">Projects</a></li>
               </ul>
-
             </nav>
           </div>
-        </div> <!-- closes row div -->
-      </div> <!-- closes container div -->
+        </div>
+      </div>
     </header>
 
     <section id="newsletter">
