Removed sidebar from about page so that this page is simpler.
Only one section exists for this page now and it will contain all
the about me info.

Also styles the title of this page and updates the title copy.

--- a/css/styles.css
+++ b/css/styles.css
@@ -271,6 +271,11 @@ header nav {
   margin: 0;
   font-size: 2.25rem;
   line-height: 1.25;
+  text-transform: capitalize;
+}
+
+.about-title {
+  margin: 2rem 0;
 }
 
 /* current page color, welcome span color */
