--- a/views/about.html
+++ b/views/about.html
@@ -41,41 +41,16 @@
       </div>
     </header>
 
-    <section id="newsletter">
-      <div class="container">
-        <div class="row">
-          <div class="col-xs-6 text-center">
-            <h2>Subscribe to the Newsletter!</h2>
-          </div>
-          <div class="col-xs-6 text-center">
-            <form action="home.html" method="post">
-              <input type="email" placeholder="email@email.com" required>
-              <button type="submit" class="subscribe_button" name="button">Subscribe</button>
-              <br><br>
-            </form>
-          </div>
-        </div>
-      </div>
-    </section> <!-- ends newsletter section -->
-
-    <section id="main">
+    <section id="main" class="dark-blue">
       <div class="container">
         <article id="main-col">
-          <h1 class="page-title">About Me</h1>
+          <h1 class="page_title about-title text-center">Thank you for stopping by!</h1>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,  nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </article>
-
-        <!-- about me section sidebar -->
-        <aside id="sidebar">
-          <div class="dark">
-            <h3 class="sidebar-title">What We Do</h3>
-            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          </div>
-        </aside>
       </div>
-    </section> <!-- ends main section -->
+    </section>
 
     <footer class="text-center">
       <div class="container">
