--- a/views/projects.html
+++ b/views/projects.html
@@ -44,22 +44,19 @@
       </div>
     </header>
 
-    <section id="newsletter">
-      <div class="container">
-        <div class="row">
-          <div class="col-xs-6 text-center">
-            <h2>Subscribe to the Newsletter!</h2>
-          </div>
-          <div class="col-xs-6 text-center">
-            <form action="home.html" method="post">
-              <input type="email" placeholder="email@email.com" required>
-              <button type="submit" class="subscribe_button" name="button">Subscribe</button>
-              <br><br>
-            </form>
-          </div>
+    <section id="newsletter" class="index-newsletter">
+      <div class="row">
+        <div class="small-12 medium-6 text-center">
+          <h2 class="newsletter_title">Subscribe to the Newsletter!</h2>
+        </div>
+        <div class="small-12 medium-6 text-center">
+          <form action="home.html" method="post">
+            <input type="email" placeholder="email@email.com" class="email-input" required>
+            <button type="submit" class="subscribe_button" name="button">Subscribe</button>
+          </form>
         </div>
       </div>
-    </section> <!-- ends newsletter section -->
+    </section>
 
     <section id="main">
       <div class="container">
@@ -72,7 +69,7 @@
                   <h1>Railroad</h1>
                   <p class="img-text">While not as vital to passengers, rail transportation still moves millions of people per year and also transports significant amounts of cargo throughout the United States. </p>
                 </div> <!--ends content body-->
-                <img src="img/rr.jpg" alt="Rail Bridge">
+                <img src="../img/rr.jpg" alt="Rail Bridge">
               </div> <!--ends content wrap-->
             </div> <!--ends layer bottom-->
 
@@ -83,7 +80,7 @@
                   <h1>Coffee</h1>
                   <p class="img-text">An integral part of American's lives, this drink took hold when need for an alternative beverage arose during the Boston Tea Party.</p>
                 </div> <!--ends content body-->
-                <img src="img/coffee.jpg" alt="Coffee Image">
+                <img src="../img/coffee.jpg" alt="Coffee Image">
               </div> <!--ends content wrap-->
             </div> <!--ends layer top-->
             <!-- skew line that divides the images -->
