--- a/views/projects.html
+++ b/views/projects.html
@@ -91,8 +91,8 @@
         <!-- image slider section sidebar -->
         <aside id="sidebar">
           <div class="dark">
-            <h3 class="sidebar-title">Image Slider Description</h3>
-            <p>The image "slider" is written in core JavaScript and CSS. It works by separating the two images and their corresponding description text into different layers, one on top and one on bottom. When the mouse is moving over an image, it is slowly concealing one layer over another, and back again when the mouse is moved in the opposite direction.</p>
+            <h3 class="sidebar-title">Image Slider</h3>
+            <p>The image "slider" is written in JavaScript and CSS. It works by separating the two images and their corresponding description text into different layers, one on top and one on bottom. When the mouse is moving over an image, it is slowly concealing one layer over another, and back again when the mouse is moved in the opposite direction.</p>
           </div>
         </aside>
       </div>
